--- a/Text_Analysis(Web_scraping).ipynb
+++ b/Text_Analysis(Web_scraping).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8poiIbWxG23Csh3rmXCmT",
+      "authorship_tag": "ABX9TyNW9kQ4KubkVMlZ/U4obG9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,11 +128,9 @@
       "source": [
         "input_df = pd.read_excel('/content/Input.xlsx')\n",
         "\n",
-        "# Initialize a list to store analysis results\n",
-        "\n",
         "results = []\n",
         "\n",
-        "# Iterate through each row in the input DataFrame\n",
+        "# Iterate each row in input DataFrame\n",
         "for index, row in input_df.iterrows():\n",
         "    url_id = row['URL_ID']\n",
         "    url = row['URL']\n",
@@ -140,14 +138,15 @@
         "        response = requests.get(url)\n",
         "        soup = BeautifulSoup(response.content, 'html.parser')\n",
         "\n",
-        "    # Find and extract the article title and text\n",
+        "    #extract the article title and text\n",
         "        article_text = \"\"\n",
         "        article_title = soup.find('title').get_text()\n",
-        "        paragraphs = soup.find_all(['p', 'div'])  # Adjust based on the actual structure\n",
+        "        paragraphs = soup.find_all(['p', 'div'])\n",
         "        for p in paragraphs:\n",
         "            article_text += p.get_text()\n",
         "        return article_title, article_text\n",
         "    article_title, article_text = extract_article_text(url)\n",
+        "\n",
         "    # Perform text analysis using TextBlob\n",
         "    b = TextBlob(article_text)\n",
         "    positive_score = b.sentiment.polarity\n",
@@ -157,7 +156,7 @@
         "    avg_sentence_length = len(b.words) / len(b.sentences)\n",
         "    import re\n",
         "    def count_syllables(word):\n",
-        "    # Convert the word to lowercase\n",
+        "    # Convert word to lowercase\n",
         "        word = word.lower()\n",
         "\n",
         "    # Define a regular expression to match consecutive vowels\n",
@@ -173,16 +172,25 @@
         "\n",
         "    word = \"syllable\"\n",
         "    syllable_count = count_syllables(word)\n",
+        "\n",
         "    def count_complex_words(b):\n",
         "        complex_word_count = sum(1 for word in b.words if syllable_count >= 3)\n",
         "        return complex_word_count\n",
+        "\n",
         "    complex_word_count = count_complex_words(b)\n",
+        "\n",
         "    percentage_complex_words = (complex_word_count / len(b.words)) * 100\n",
+        "\n",
         "    fog_index = 0.4 * (avg_sentence_length + percentage_complex_words)\n",
+        "\n",
         "    avg_words_per_sentence = len(b.words) / len(b.sentences)\n",
+        "\n",
         "    word_count = len(b.words)\n",
+        "\n",
         "    avg_syllables_per_word = syllable_count / word_count\n",
+        "\n",
         "    personal_pronoun_count = sum(1 for word in b.words if word.lower() in ['i', 'you', 'he', 'she', 'we', 'they'])\n",
+        "\n",
         "    avg_word_length = sum(len(word) for word in b.words) / word_count\n",
         "\n",
         "\n",
@@ -219,10 +227,10 @@
       ],
       "metadata": {
         "id": "B5fvhsNZzM-n",
-        "outputId": "c68c8f09-f6e6-44c6-aaae-059f4f790d61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c68c8f09-f6e6-44c6-aaae-059f4f790d61"
       },
       "execution_count": 17,
       "outputs": [
@@ -286,78 +294,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gio9dFoexfG2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "s3VMrglsyPUj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZfVgswe9zZ_U"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "hjhS912Yzefs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_Arn-TRWFU-Y"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eWUabfElEunQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
-      "metadata": {
-        "id": "zewZGq6mE7FI"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uwKzen2yE-uB"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
