--- a/Text_Analysis(Web_scraping).ipynb
+++ b/Text_Analysis(Web_scraping).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNW9kQ4KubkVMlZ/U4obG9h",
+      "authorship_tag": "ABX9TyOOqTPKxIFkF3XSMwK0DaHM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,6 +196,7 @@
         "\n",
         "    result = {\n",
         "        'URL_ID': url_id,\n",
+        "        'URL' : url,\n",
         "        'POSITIVE SCORE': positive_score,\n",
         "        'NEGATIVE SCORE': negative_score,\n",
         "        'POLARITY SCORE': polarity_score,\n",
@@ -217,83 +218,17 @@
       "metadata": {
         "id": "ygRd11Dkuorg"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(output_df)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "B5fvhsNZzM-n",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c68c8f09-f6e6-44c6-aaae-059f4f790d61"
+        "id": "ljN9sF1RAD8f"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "      URL_ID  POSITIVE SCORE  NEGATIVE SCORE  POLARITY SCORE  \\\n",
-            "0      123.0        0.143031        0.143031        0.143031   \n",
-            "1      321.0        0.138799        0.138799        0.138799   \n",
-            "2     2345.0        0.112002        0.112002        0.112002   \n",
-            "3     4321.0        0.150462        0.150462        0.150462   \n",
-            "4      432.0        0.144979        0.144979        0.144979   \n",
-            "..       ...             ...             ...             ...   \n",
-            "109  50921.0        0.122659        0.122659        0.122659   \n",
-            "110  51382.8        0.073174        0.073174        0.073174   \n",
-            "111  51844.6        0.145176        0.145176        0.145176   \n",
-            "112  52306.4        0.116704        0.116704        0.116704   \n",
-            "113  52768.2        0.115631        0.115631        0.115631   \n",
-            "\n",
-            "     SUBJECTIVITY SCORE  AVG SENTENCE LENGTH  PERCENTAGE OF COMPLEX WORDS  \\\n",
-            "0              0.384337            37.326121                          0.0   \n",
-            "1              0.419228            62.300366                          0.0   \n",
-            "2              0.384709            28.669021                          0.0   \n",
-            "3              0.341231            42.638554                          0.0   \n",
-            "4              0.340782            42.236686                          0.0   \n",
-            "..                  ...                  ...                          ...   \n",
-            "109            0.346614            57.466216                          0.0   \n",
-            "110            0.355691            56.100686                          0.0   \n",
-            "111            0.396833            40.706362                          0.0   \n",
-            "112            0.366469            41.265918                          0.0   \n",
-            "113            0.359298            50.168421                          0.0   \n",
-            "\n",
-            "     FOG INDEX  AVG NUMBER OF WORDS PER SENTENCE  COMPLEX WORD COUNT  \\\n",
-            "0    14.930448                         37.326121                   0   \n",
-            "1    24.920147                         62.300366                   0   \n",
-            "2    11.467608                         28.669021                   0   \n",
-            "3    17.055422                         42.638554                   0   \n",
-            "4    16.894675                         42.236686                   0   \n",
-            "..         ...                               ...                 ...   \n",
-            "109  22.986486                         57.466216                   0   \n",
-            "110  22.440275                         56.100686                   0   \n",
-            "111  16.282545                         40.706362                   0   \n",
-            "112  16.506367                         41.265918                   0   \n",
-            "113  20.067368                         50.168421                   0   \n",
-            "\n",
-            "     WORD COUNT  SYLLABLE PER WORD  PERSONAL PRONOUNS  AVG WORD LENGTH  \n",
-            "0         24150           0.000083                389         5.763188  \n",
-            "1         17008           0.000118                354         5.774635  \n",
-            "2         28411           0.000070                457         5.601281  \n",
-            "3         21234           0.000094                420         5.729538  \n",
-            "4         21414           0.000093                420         5.695993  \n",
-            "..          ...                ...                ...              ...  \n",
-            "109       17010           0.000118                340         5.762845  \n",
-            "110       24516           0.000082                354         5.480992  \n",
-            "111       24953           0.000080                389         5.528634  \n",
-            "112       22036           0.000091                480         5.584816  \n",
-            "113       19064           0.000105                347         5.867551  \n",
-            "\n",
-            "[114 rows x 14 columns]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
